--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,4 +1,18 @@
 .tweet-container {
   display: flex;
   flex-direction: column;
+  padding: 5px;
 }
+
+.tweet {
+  position: relative;
+  left: 8px;
+  padding: 20px;
+  border-style: solid;
+  margin: 15px;
+}
+
+.tweet:hover {
+  box-shadow: 10px 10px 2px 1px #42aaf5;
+}
+
